--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
+  "devDependencies": {
+    "redux-logger": "3.0.6"
+  },
   "description": "Clone of SoundCloud.com",
   "version": "1.0.0",
   "main": "index.js",
