--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.88.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
