--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch --mode=development"
+    "webpack": "webpack --watch --mode=development",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/codedbyq/CloudSound.git"
+  },
+  "engines": {
+    "node": "10.13.0",
+    "npm": "6.14.5"
   },
   "keywords": [],
   "author": "",
