--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-plugin-file-loader": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
