--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
+    "react-player": "^2.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.2",
+    "wavesurfer.js": "^4.0.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
